[package]
name = "dbmesh-control-panel"
version = "0.1.0"
authors = ["AlphaPo <juaby@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] }
byteorder = "1.3.2"
bytes = "0.5"
sqlparser = "0.5.0"
r2d2 = "0.8.6"
hyper = "0.12.35"
serde_json = "1.0.41"
chrono = "0.4.9"
log = "0.4.8"
env_logger = "0.7.1"
mysql = "17.0.0"
bitflags = "1.2.1"
r2d2_mysql = "16.0.0"
mysqlbinlog = "0.1.5"
rand = "0.7.3"
rocket = "0.4.4"

[build-dependencies]
cc = "1.0"