[package]
name = "dbmesh-control-panel"
version = "0.1.0"
authors = ["AlphaPo <juaby@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
futures = "0.3.7"
tokio = { version = "0.3", features = ["full"] }
tokio-util = { version = "0.4", features = ["full"] }
byteorder = "1.3"
bytes = "0.5"
sqlparser = "0.6"
r2d2 = "0.8"
# hyper = "0.13"
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.8"
mysql = "20.0"
bitflags = "1.2"
r2d2_mysql = "18.0"
mysqlbinlog = "0.1"
rand = "0.7"
# rocket = "0.4"

[build-dependencies]
cc = "1.0"