[package]
name = "martlet-mesh-control-panel"
version = "0.1.0"
authors = ["AlphaPo <juaby@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
futures = "0.3"
tokio = { version = "1.1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
byteorder = "1.4.2"
bytes = "1.0"
sqlparser = "0.7"
r2d2 = "0.8"
hyper = "0.14"
serde_json = "1.0.61"
chrono = "0.4.19"
log = "0.4.13"
env_logger = "0.8.2"
mysql = "20.1"
bitflags = "1.2.1"
r2d2_mysql = "18.0"
mysqlbinlog = "0.1.5"
rand = "0.8.2"
rocket = "0.4.6"

[build-dependencies]
cc = "1.0"