[package]
name = "dbmesh-data-panel"
version = "0.1.0"
authors = ["AlphaPo <juaby@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] }
bytes = "0.5"

sqlparser = "0.5.0"
# sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "tls", "mysql", "postgres", "bigdecimal", "json", "chrono", "ipnetwork", "uuid" ]}
# sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "all" ]}
mysql = "18.1.0"
# mysql_async = "0.22.2"
# r2d2 = "0.8.6"
# r2d2_mysql = "16.0.0"
mysqlbinlog = "0.1.5"

rand = "0.7.3"
bitflags = "1.2.1"
byteorder = "1.3.2"

hyper = "0.12.35"
serde_json = "1.0.41"
chrono = "0.4.9"

log = "0.4.8"
env_logger = "0.7.1"

clap = "2.33"

lazy_static = "1.4.0"
dashmap = "3.11.0"

[build-dependencies]
cc = "1.0"