[package]
name = "dbmesh-data-panel"
version = "0.1.0"
authors = ["AlphaPo <juaby@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures = "0.3.7"
tokio = { version = "0.3", features = ["full"] }
tokio-util = { version = "0.4", features = ["full"] }
bytes = "0.5"

sqlparser = "0.6"
# sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "tls", "mysql", "postgres", "bigdecimal", "json", "chrono", "ipnetwork", "uuid" ]}
# sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "all" ]}
mysql = "20.0"
# mysql_async = "0.25"
# r2d2 = "0.8"
# r2d2_mysql = "18.0"
mysqlbinlog = "0.1"

rand = "0.7"
bitflags = "1.2"
byteorder = "1.3"

# hyper = "0.13"
serde_json = "1.0"
chrono = "0.4"

log = "0.4"
env_logger = "0.8"

clap = { version = "2.33", features = ["yaml"] }
yaml-rust = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

rhai = { version = "0.19" }

lazy_static = "1.4"
dashmap = "3.11.10"

casbin = { version = "2.0", default-features = false, features = ["runtime-async-std", "logging"] }
async-std = { version = "1.6", features = ["attributes"] }

[build-dependencies]
cc = "1.0"